# src/controllers/personnel.controller.js
@@ -7,6 +7,18 @@ const Personnel = require("../models/personnel.model");
 
 module.exports = {
   list: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "List Personnels"
+        #swagger.description = `
+            You can send query with endpoint for search[], sort[], page and limit.
+            <ul> Examples:
+                <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>
+                <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>
+                <li>URL/?<b>page=2&limit=1</b></li>
+            </ul>
+        `
+    */
     // const data = await Personnel.find(search).sort(sort).skip(skip).limit(limit)
     const data = await res.getModelList(Personnel);
 
@@ -18,6 +30,11 @@ module.exports = {
   },
 
   create: async (req, res) => {
+    /*
+      _swagger.deprecated = true
+      #swagger.ignore = true
+ 
+    */
     const data = await Personnel.create(req.body);
     // isLead Control:
     const isLead = req.body.isLead || false;
@@ -39,6 +56,10 @@ module.exports = {
   },
 
   read: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Get Single Personnel"
+    */
     const data = await Personnel.findOne({ _id: req.params.id });
 
     res.status(200).send({
@@ -48,6 +69,11 @@ module.exports = {
   },
 
   update: async (req, res) => {
+    /*
+      _swagger.deprecated = true
+      #swagger.ignore = true
+    */
+
     // isLead Control:
     const isLead = req.body?.isLead || false;
     if (isLead) {
@@ -79,6 +105,11 @@ module.exports = {
   },
 
   delete: async (req, res) => {
+    /*
+        #swagger.tags = ["Personnels"]
+        #swagger.summary = "Delete Personnel"
+    */
+
     const data = await Personnel.deleteOne({ _id: req.params.id });
 
     // const isDeleted = data.deletedCount >= 1 ? true : false;
